Update liabilities notebook

--- a/notebooks/liabilities.ipynb
+++ b/notebooks/liabilities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12,13 +12,13 @@
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n",
       "| Last Updated | Institution                   | Name                      | Owner     | Value    |\n",
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n",
-      "| \u001b[0;30;41m2017-10-25\u001b[0m   | US Bank                       | Credit Card One           | Cyrus     | 1849.99  |\n",
-      "| \u001b[0;30;41m2017-10-25\u001b[0m   | US Bank                       | Credit Card Two           | Cyrus     | 1844.66  |\n",
-      "| 2017-11-07   | US Bank                       | Reserve Line of Credit    | Cyrus     | 4800.0   |\n",
-      "| 2017-11-05   | US Bank                       | Credit Card               | Annamarie | 1756.96  |\n",
-      "| \u001b[0;30;41m2017-10-22\u001b[0m   | Parents                       | Loan for 8th Light Shares | Cyrus     | 5000.0   |\n",
-      "| 2017-11-06   | Draper and Kramer Mortgage Co | Mortgage                  | Family    | 259200.0 |\n",
-      "| 2017-11-05   | American Express              | Credit Card               | Cyrus     | 1238.37  |\n",
+      "| 2017-11-12   | US Bank                       | Credit Card One           | Cyrus     | 2936.95  |\n",
+      "| 2017-11-12   | US Bank                       | Credit Card Two           | Cyrus     | 1793.24  |\n",
+      "| 2017-11-12   | US Bank                       | Reserve Line of Credit    | Cyrus     | 4817.28  |\n",
+      "| 2017-11-12   | US Bank                       | Credit Card               | Annamarie | 1931.76  |\n",
+      "| 2017-11-12   | Parents                       | Loan for 8th Light Shares | Cyrus     | 5000.0   |\n",
+      "| 2017-11-12   | Draper and Kramer Mortgage Co | Mortgage                  | Family    | 259200.0 |\n",
+      "| 2017-11-12   | American Express              | Credit Card               | Cyrus     | 969.35   |\n",
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n"
      ]
     }
