--- a/notebooks/liabilities.ipynb
+++ b/notebooks/liabilities.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "nb_dir = os.path.split(os.getcwd())[0]\n",
+    "if nb_dir not in sys.path:\n",
+    "    sys.path.append(nb_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -12,25 +26,19 @@
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n",
       "| Last Updated | Institution                   | Name                      | Owner     | Value    |\n",
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n",
-      "| \u001b[0;30;41m2017-10-25\u001b[0m   | US Bank                       | Credit Card One           | Cyrus     | 1849.99  |\n",
-      "| \u001b[0;30;41m2017-10-25\u001b[0m   | US Bank                       | Credit Card Two           | Cyrus     | 1844.66  |\n",
-      "| 2017-11-07   | US Bank                       | Reserve Line of Credit    | Cyrus     | 4800.0   |\n",
-      "| 2017-11-05   | US Bank                       | Credit Card               | Annamarie | 1756.96  |\n",
-      "| \u001b[0;30;41m2017-10-22\u001b[0m   | Parents                       | Loan for 8th Light Shares | Cyrus     | 5000.0   |\n",
-      "| 2017-11-06   | Draper and Kramer Mortgage Co | Mortgage                  | Family    | 259200.0 |\n",
-      "| 2017-11-05   | American Express              | Credit Card               | Cyrus     | 1238.37  |\n",
+      "| 2017-11-17   | US Bank                       | Credit Card One           | Cyrus     | 2973.23  |\n",
+      "| 2017-11-17   | US Bank                       | Credit Card Two           | Cyrus     | 1755.75  |\n",
+      "| 2017-11-17   | US Bank                       | Reserve Line of Credit    | Cyrus     | 3027.6   |\n",
+      "| 2017-11-17   | US Bank                       | Credit Card               | Annamarie | 2005.49  |\n",
+      "| \u001b[0;30;41m2017-11-12\u001b[0m   | Parents                       | Loan for 8th Light Shares | Cyrus     | 5000.0   |\n",
+      "| \u001b[0;30;41m2017-11-12\u001b[0m   | Draper and Kramer Mortgage Co | Mortgage                  | Family    | 259200.0 |\n",
+      "| 2017-11-21   | American Express              | Credit Card               | Cyrus     | 1415.85  |\n",
+      "| 2017-11-17   | Parents                       | Repayment for Electronics | Cyrus     | 335.0    |\n",
       "+--------------+-------------------------------+---------------------------+-----------+----------+\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "nb_dir = os.path.split(os.getcwd())[0]\n",
-    "if nb_dir not in sys.path:\n",
-    "    sys.path.append(nb_dir)\n",
-    "    \n",
     "from portfolio_creator.data_source import DataSource\n",
     "from portfolio_creator.portfolio_creator import PortfolioCreator\n",
     "from terminaltables import AsciiTable\n",
@@ -43,15 +51,8 @@
     "    data.append(liability.liabilities_row())\n",
     "\n",
     "t = AsciiTable(data)\n",
-    "print(t.table)\n"
+    "print(t.table)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
